# counter-radicalize

./: .gitignore  .gitmodules  README.md  ffmpeg.py  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.app.json  vite.config.ts
.github/workflows/: deploy.yml
models/: utils.py  vox-profile.ipynb  whisper-segment.ipynb
models/outputs/: segments_emotion.json  segments_emotion.parquet  transcript.parquet  transcript.txt
public/: manifest.json
public/hls/: message.m3u8
src/: App.vue
src/assets/styles/: main.scss  palette.scss
src/components/: EmotionCircle.vue  HlsPlayer.vue  Transcript.vue
src/types/: segment.ts
